# Desenvolvimento-de-robo-movel-bi-funcional

UnoR4Wifi/src/Cliente/: cliente.py  clienteUnoR4WiFi.py  comandos.py  erro.py  exemplo.py  main.py  pyproject.toml  robo.py
UnoR4Wifi/src/Cliente/docs/source/: Cliente.rst  Doxyfile.in  cliente.rst  clienteUnoR4WiFi.rst  comandos.rst  conf.py  erro.rst  index.rst  modules.rst  robo.rst
UnoR4Wifi/src/Cliente/docs/source/doc_out/html/: classes.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  servidorUnoR4Wifi_8ino.html  servidorUnoR4Wifi_8ino_a0734f9b67afb5875ef26e300ca658e14_icgraph.map  servidorUnoR4Wifi_8ino_a0734f9b67afb5875ef26e300ca658e14_icgraph.md5  servidorUnoR4Wifi_8ino_a087f779b8b9f4f18cf4ba1b4ead11b0d_icgraph.md5  servidorUnoR4Wifi_8ino_a126461d53e055bb0a536d18c65bec6fa_icgraph.map  servidorUnoR4Wifi_8ino_a346b08a0d427c6c5b479b8ab89ddf938_icgraph.map  servidorUnoR4Wifi_8ino_a346b08a0d427c6c5b479b8ab89ddf938_icgraph.md5  servidorUnoR4Wifi_8ino_a3f72d87240811fc0e125e5327c97b57f_icgraph.md5  servidorUnoR4Wifi_8ino_a452a1f6df908dd30fb1b6952feb6a68f_icgraph.map  servidorUnoR4Wifi_8ino_a4adbd25c74d0633d3ca2edfb43779b16_icgraph.map  servidorUnoR4Wifi_8ino_a4e40ae9a55f48f68f1cdb08ed9076b68_icgraph.map  servidorUnoR4Wifi_8ino_a4e40ae9a55f48f68f1cdb08ed9076b68_icgraph.md5  servidorUnoR4Wifi_8ino_a4fc01d736fe50cf5b977f755b675f11d_cgraph.map  servidorUnoR4Wifi_8ino_a4fc01d736fe50cf5b977f755b675f11d_cgraph.md5  servidorUnoR4Wifi_8ino_a50513ef676a651868bdc89c0020ba7fa_icgraph.map  (+46 more)
(+176 files in other folders)
